2016-10-13  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx: Update to 1.2.

	* tests: New test suite for OpenPGP card with PyTest.

	* src/configure (factory_reset): New.

	* src/usb-ccid.c (ccid_power_on): Use ATR_head and historical
	bytes.

	* src/openpgp-do.c (rw_algorithm_attr): Clear fingerprint, timestamp,
	and possibly ds_counter.

2016-10-12  Niibe Yutaka  <gniibe@fsij.org>

	* test/features/steps.py (cmd_reset_retry_counter): Fix.
	* tool/gnuk_token.py (gnuk_token.cmd_reset_retry_counter): Fix.
	(gnuk_token.cmd_select_openpgp): Fix P2.

2016-09-02  Niibe Yutaka  <gniibe@fsij.org>

	* src/configure (REVISION): Fix the detection of .git.
	It may be a regular file (if it's created by worktree).

2016-08-24  Niibe Yutaka  <gniibe@fsij.org>

	* test/features/steps.py (ini): Use GLC (the global context),
	instead of FTC (the feature context), so that token only is
	opened once.

2016-08-03  Niibe Yutaka  <gniibe@fsij.org>

	* tool/hub_ctrl.py: Port to Python 3.

2016-07-11  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.2.1.

	* src/usb-ccid.c (ccid_power_on): Fix call of chopstx_create.
	* src/usb-msc.c (msc_init): Ditto.
	* src/pin-cir.c (cir_init): Ditto.
	* src/neug.c (neug_init): Ditto.
	* src/main.c (main): Ditto.

	* src/usb-ccid.c (struct ccid): Arrange for smaller footprint.
	* src/gnuk.h (struct apdu): Likewise.

	* src/usb-ccid.c (ccid_card_change_signal): Don't touch ccid_state_p.
	(ccid_state_p): This is constant.

	* src/configure (output_vendor_product_serial_strings): Add const
	qualifier.

	* src/usb-ccid.c (epo_init, epi_init): Simplify without notify method.
	(EP1_IN_Callback, EP1_OUT_Callback): Call notify_tx and notify_icc
	directly.

2016-07-09  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (openpgp_card_thread): Don't need to get SELF.

2016-07-06  NIIBE Yutaka  <gniibe@fsij.org>

	* src/pin-cir.c (cir_getchar): Use chopstx_poll.
	* src/usb-ccid.c (usb_tx_done): Fix ifdef condition.