@@ -1,5 +1,7 @@
 2016-10-13  Niibe Yutaka  <gniibe@fsij.org>
 
+	* src/status-code.h: Rename from openpgp.h.
+
 	* chopstx: Update to 1.2.
 
 	* tests: New test suite for OpenPGP card with PyTest.
